feat: support forcing reasoning-channel echo for LLM streaming (#1363)
* enh: Add option to force reasoning echo and use it in agents

* refactor: create Llm.Options builder and move forceReasoningEcho to an Llm field

* refactor: move echo into Llm.Options

* fix: fix unit tests

---------

Co-authored-by: Jonathan Ellis <jbellis@gmail.com>